--- a/app/src/main/res/layout/activity_date_picker.xml
+++ b/app/src/main/res/layout/activity_date_picker.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.MainActivity">
+    tools:context=".ui.activity.MainActivity">
 
     <cn.aigestudio.datepicker.views.DatePicker
         android:id="@+id/main_dp"
