--- a/app/src/main/res/layout/list_item_head.xml
+++ b/app/src/main/res/layout/list_item_head.xml
@@ -1,17 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:background="#c7abab"
-    android:layout_height="120dp">
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/news_list_card_view"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    card_view:cardBackgroundColor="#FFFFFF"
+    card_view:cardCornerRadius="4dp"
+    card_view:cardElevation="4dp">
 
-    <TextView
-        android:id="@+id/list_item_head_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="toubu"
-        android:textSize="20pt"/>
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@mipmap/ic_launcher"/>
-</LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="140dp">
+
+        <TextView
+            android:id="@+id/list_item_head_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="toubu"
+            android:textSize="20pt"/>
+        <ImageView
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/ic_launcher"/>
+
+    </RelativeLayout>
+
+</android.support.v7.widget.CardView>
