--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -10,16 +10,63 @@
     card_view:cardCornerRadius="4dp"
     card_view:cardElevation="4dp">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp" >
-        <TextView
-            android:id="@+id/list_item_tv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="10pt"
-            android:text="1"/>
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-    </RelativeLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="10dp"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/item_week_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:textSize="@dimen/text_size_15"
+                android:layout_gravity="center"
+                android:text="星期二"/>
+
+            <TextView
+                android:id="@+id/item_data_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_gravity="center"
+                android:padding="10dp"
+                android:background="@drawable/round_tv_bg"
+                android:textSize="@dimen/text_size_30"
+                android:text="3"/>
+            <TextView
+                android:id="@+id/item_bill_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_gravity="center"
+                android:text="434334.2$"
+                android:textSize="@dimen/text_size_20"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:padding="5dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:background="#edb0b0"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="90dp"
+                android:layout_marginTop="5dp"
+                android:background="#bbe7d3"/>
+        </LinearLayout>
+    </LinearLayout>
 
 </android.support.v7.widget.CardView>
