--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,7 @@
     <dimen name="sampler_text_size">16sp</dimen>
 
     <dimen name="text_size_10">10sp</dimen>
+    <dimen name="text_size_18">18sp</dimen>
     <dimen name="text_size_15">15sp</dimen>
     <dimen name="text_size_20">20sp</dimen>
     <dimen name="text_size_25">25sp</dimen>
