--- a/app/src/main/res/layout/activity_date_picker.xml
+++ b/app/src/main/res/layout/activity_date_picker.xml
@@ -7,27 +7,28 @@
     android:orientation="vertical"
     tools:context=".ui.activity.MainActivity">
 
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/app_bar_layout"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:elevation="3dp">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#c76060"
+            app:layout_scrollFlags="scroll|enterAlways"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+
+    </android.support.design.widget.AppBarLayout>
+
     <cn.aigestudio.datepicker.views.DatePicker
-        android:id="@+id/main_dp"
+        android:id="@+id/av_datePicker"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#33501b"/>
 
-    <Button
-        android:id="@+id/main_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="DatePicker" />
-    <co.lujun.androidtagview.TagContainerLayout
-        android:id="@+id/tag_bill_menueeee"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="0dp"
-        android:padding="10dp"
-        app:tag_clickable="true"
-        app:container_enable_drag="false"
-        app:horizontal_interval="10dp"
-        app:vertical_interval="10dp"
-        app:tag_theme="random" />
 </LinearLayout>
