--- a/app/src/main/res/layout/activity_framelayout.xml
+++ b/app/src/main/res/layout/activity_framelayout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -7,10 +7,11 @@
 
     <FrameLayout
         android:id="@+id/framelayout"
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/app_bar_layout"
 
       />
 
-</RelativeLayout>
+</LinearLayout>
