--- a/app/src/main/res/layout/dialog_select_bill_type.xml
+++ b/app/src/main/res/layout/dialog_select_bill_type.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="wrap_content"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
@@ -10,7 +10,13 @@
         android:text="选择账单类型"
         android:textColor="#000"
         android:textSize="@dimen/text_size_20"/>
-
+    <RadioGroup
+        android:id="@+id/radiogroup1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_x="3px"
+        >
     <RadioButton
         android:id="@+id/radio_type_one"
         android:layout_width="wrap_content"
@@ -44,13 +50,17 @@
         android:padding="20dp"
         android:checked="true"
         android:text="休闲型"/>
-
+    </RadioGroup>
     <TextView
         android:id="@+id/select_type_ok"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:layout_marginRight="20dp"
         android:padding="20dp"
         android:text="确定"
         android:textColor="@color/colorPrimary"
         android:textSize="@dimen/text_size_15"/>
+
+
 </LinearLayout>
