--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -51,6 +51,7 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerview"
+            android:padding="5dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
