--- a/app/src/main/res/layout/list_item_month_head.xml
+++ b/app/src/main/res/layout/list_item_month_head.xml
@@ -9,6 +9,7 @@
         android:layout_height="wrap_content"
         android:textSize="@dimen/text_size_20"
         android:padding="5dp"
+        android:textColor="#000000"
         android:text="2016-7"
         android:layout_gravity="center"/>
 </LinearLayout>
