增加 友盟统计 和 版本升级管理

--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -24,7 +24,7 @@
                 android:id="@+id/collapsing_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:contentScrim="?attr/colorPrimary"
+                app:contentScrim="@color/colorOverall"
                 app:expandedTitleMarginEnd="70dp"
                 app:expandedTitleMarginStart="50dp"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
