--- a/app/src/main/res/layout/activity_about_app.xml
+++ b/app/src/main/res/layout/activity_about_app.xml
@@ -3,11 +3,14 @@
     android:id="@+id/fl_container"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:clipToPadding="true"
+    android:fitsSystemWindows="true"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include layout="@layout/base_toolbar"/>
+   <include layout="@layout/base_toolbar"/>
+
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/about_swipe_refresh_layout"
@@ -19,7 +22,9 @@
 
         <WebView
             android:id="@+id/about_webview"
-
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             />
