--- a/app/src/main/res/layout/t.xml
+++ b/app/src/main/res/layout/t.xml
@@ -1,30 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
 
-    <bill.zts.com.bill.utils.view.CircleTextView
-        android:id="@+id/circleTextview"
-        android:layout_width="wrap_content"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/coordinatorLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+     >
+
+
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appBarLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text=" hello_world" />
-    <RelativeLayout
+        android:fitsSystemWindows="true"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/collapsing_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:contentScrim="@color/colorOverall"
+            app:expandedTitleMarginEnd="70dp"
+            app:expandedTitleMarginStart="50dp"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:fitsSystemWindows="true"
+                android:scaleType="centerCrop"
+                android:src="@mipmap/about_app_bg"
+                app:layout_collapseMode="parallax" />
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
+        </android.support.design.widget.CollapsingToolbarLayout>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.widget.SwipeRefreshLayout
+
+        android:id="@+id/about_swipe_refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        >
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="15dp"
+        >
 
-         >
+        <WebView
+            android:id="@+id/about_webview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
 
-        <bill.zts.com.bill.utils.view.CircleImageView
-            android:layout_width="160dp"
-            android:layout_height="160dp"
-            android:layout_centerInParent="true"
-            android:background="#5c4444"
-            android:src="@drawable/round_tv_bg"
-            app:civ_border_width="2dp"
-            app:civ_border_color="#5c4444" />
+    </android.support.v4.widget.NestedScrollView>
 
-    </RelativeLayout>
-</LinearLayout>
+    </android.support.v4.widget.SwipeRefreshLayout>
+</android.support.design.widget.CoordinatorLayout>
+
+
+<!--
+<android.support.v4.widget.SwipeRefreshLayout
+
+android:id="@+id/about_swipe_refresh_layout"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+    >
+
+<WebView
+    android:id="@+id/about_webview"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    />
+
+</android.support.v4.widget.SwipeRefreshLayout>-->
