修复一些bug，修改一些主题，发布版本1.2

--- a/app/src/main/res/layout/t.xml
+++ b/app/src/main/res/layout/t.xml
@@ -28,6 +28,7 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
+                android:id="@+id/about_bg_img"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
                 android:fitsSystemWindows="true"
