--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#5bcee6</color>
+    <color name="colorPrimary">#3b1400</color>
+    <color name="colorPrimaryDark">#3b1400</color>
     <color name="colorAccent">#FF4081</color>
 
     <color name="medium_blue">#1b89d7</color>
@@ -9,6 +9,7 @@
     <color name="pick_activity_darkColor">#c76060</color>
 
     <color name="colorOverall">#3b1400</color>
-
+    <color name="colorFAbg">#CC3854</color>
+    <color name="colorTextBg">#787777</color>
     <color name="sss">#3b1400</color>
 </resources>
