--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,8 +2,8 @@
 
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:app="http://schemas.android.com/tools"
 
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/news_list_card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -28,6 +28,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
+                android:textColor="@color/colorTextBg"
                 android:textSize="@dimen/text_size_15"
                 android:layout_gravity="center"
                 android:text="星期二"/>
@@ -66,12 +67,14 @@
                 <TextView
                     android:id="@+id/item_bill_tv"
                     android:layout_width="wrap_content"
+                    android:textColor="@color/colorTextBg"
                     android:layout_height="wrap_content"
                     android:text="0"
                     android:textSize="@dimen/text_size_20"/>
                 <TextView
                      android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/colorTextBg"
                     android:text=" ￥"
                     android:textSize="@dimen/text_size_20"/>
             </LinearLayout>
