--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,7 +31,7 @@
 
     <style name="FirstTheme" parent="Theme.AppCompat">
         <item name="android:windowNoTitle">true</item>
-        <item name="android:windowBackground">@mipmap/first_activity_bg</item>
+        <item name="android:windowBackground">@mipmap/first_bg</item>
     </style>
 
 </resources>
