--- a/mvp_base/src/main/res/values/colors.xml
+++ b/mvp_base/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="colorOverall">#c76060</color>
-
+    <color name="white">#FFFFFF</color>
 </resources>
